--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
     <h1>JORGE LUIS RIVAS</h1>
     <IMG src="DSC_3398.jpg"></IMG>
-    <h2>38 AÑOS</h2>
+    <h2 class="subtitulo1">38 AÑOS</h2>
     <h3>Haedo 1853</h3>
-    <h4>Las series que mas me gustan:</h4>
-    <ul>
+    <h4>Las series que más me gustan:</h4>
+    <ul class="series">
         <li>Los Simuladores</li>
         <li>El Marginal</li>
         <li>La casa de las flores</li>
     </ul>
     <h4>Las Peliculas que más me gustan:</h4>
-    <ol>
+    <ol class="peliculas">
         <li>Nueve Reinas</li>
         <li>Gladiador</li>
         <li>Bhoemian Rapsody</li>
     </ol>
-<h2>Mi Perfil</h2>
+<h2 class="subtitulo2">Mi Perfil</h2>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro necessitatibus maxime culpa. Perspiciatis numquam provident in harum quaerat soluta eligendi, incidunt, dolor illo mollitia eius enim vitae alias iste. Corporis.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur, quia harum magni dolor nesciunt id dolorum, architecto fugiat voluptatibus, libero voluptas sunt vel tempora. Accusantium omnis beatae numquam dolorem.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus exercitationem necessitatibus. Ipsa ipsum eveniet blanditiis accusamus incidunt, iste ducimus sequi deserunt accusantium optio inventore voluptate dolore sint aspernatur dignissimos?</p>
+<br>
 
 
 <footer><b>Si queres contactarme podes completar el siguente 
