--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:ital@1&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -28,15 +32,26 @@
     </ol>
 <h2 class="subtitulo2">Mi Perfil</h2>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro necessitatibus maxime culpa. Perspiciatis numquam provident in harum quaerat soluta eligendi, incidunt, dolor illo mollitia eius enim vitae alias iste. Corporis.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur, quia harum magni dolor nesciunt id dolorum, architecto fugiat voluptatibus, libero voluptas sunt vel tempora. Accusantium omnis beatae numquam dolorem.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicin lorem
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos cum eos suscipit nam dolorum iure soluta dignissimos, deleniti eius, nemo ducimus nostrum quo excepturi exercitationem quisquam cumque. Inventore, eligendi vitae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore architecto reiciendis numquam, corrupti non id, nobis ducimus exercitationem eum debitis consequuntur voluptatibus molestias voluptatem cumque. Dicta error quis nesciunt sequi!lorem g elit. Delectus tenetur, quia harum magni dolor nesciunt id dolorum, architecto fugiat voluptatibus, libero voluptas sunt vel tempora. Accusantium omnis beatae numquam dolorem.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus exercitationem necessitatibus. Ipsa ipsum eveniet blanditiis accusamus incidunt, iste ducimus sequi deserunt accusantium optio inventore voluptate dolore sint aspernatur dignissimos?</p>
 <br>
+<br>
 
+  <div class="contenedor">
+    <div class="icono">
+        <a href="https://www.instagram.com/cabeza822001/?hl=es" target="_blank"><i class="fab fa-instagram"></i>Mi Instagram</a>
+    </div>
+  </div>
+<br>
+<br>
 
-<footer><b>Si queres contactarme podes completar el siguente 
+<footer> 
+    <b>Si queres contactarme podes completar el siguente 
     <a href="formulario.html" target="_blank">formulario.</a></b>
 </footer>
-
+<br>
+<br>
 </body>
 
 </html>
